--- a/package.json
+++ b/package.json
@@ -1,73 +1,73 @@
 {
-	"name": "json-server-auth",
-	"description": "Authentication middleware for JSON Server",
-	"version": "1.2.1",
-	"author": "Jeremy Bensimon",
-	"repository": "github:jeremyben/json-server-auth",
-	"license": "MIT",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"bin": "dist/bin.js",
-	"files": [
-		"dist"
-	],
-	"engines": {
-		"node": ">=8.10"
-	},
-	"engineStrict": true,
-	"scripts": {
-		"build": "rimraf dist && tsc -p tsconfig.build.json",
-		"prepublishOnly": "yarn run build",
-		"test": "jest",
-		"test:watch": "jest --watch --verbose false"
-	},
-	"dependencies": {
-		"bcryptjs": "^2.4.3",
-		"body-parser": "^1.19.0",
-		"express": "^4.17.1",
-		"json-server": "^0.15.0",
-		"jsonwebtoken": "^8.5.1",
-		"yargs": "^13.2.4"
-	},
-	"devDependencies": {
-		"@types/bcryptjs": "^2.4.2",
-		"@types/express": "^4.17.0",
-		"@types/jest": "^24.0.14",
-		"@types/json-server": "^0.14.0",
-		"@types/jsonwebtoken": "^8.3.2",
-		"@types/supertest": "^2.0.7",
-		"@types/yargs": "^13.0.0",
-		"jest": "^24.8.0",
-		"rimraf": "^2.6.3",
-		"supertest": "^4.0.2",
-		"tree-kill": "^1.2.1",
-		"ts-jest": "^24.0.2",
-		"ts-node-dev": "^1.0.0-pre.40",
-		"tslint": "^5.17.0",
-		"tslint-config-prettier": "^1.18.0",
-		"typescript": "^3.5.2",
-		"typescript-tslint-plugin": "^0.5.0"
-	},
-	"keywords": [
-		"JSON",
-		"server",
-		"fake",
-		"REST",
-		"API",
-		"prototyping",
-		"mock",
-		"mocking",
-		"test",
-		"testing",
-		"rest",
-		"data",
-		"dummy",
-		"sandbox",
-		"json-server",
-		"middleware",
-		"auth",
-		"authentication",
-		"authorization",
-		"jwt"
-	]
+    "name": "nss-json-server",
+    "description": "JSON Server with other useful mixins",
+    "version": "1.0.1",
+    "author": "Nashville Software School",
+    "repository": "github:nashville-software-school/nss-json-server",
+    "license": "MIT",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "bin": "dist/bin.js",
+    "files": [
+        "dist"
+    ],
+    "engines": {
+        "node": ">=8.10"
+    },
+    "engineStrict": true,
+    "scripts": {
+        "build": "rimraf dist && tsc -p tsconfig.build.json",
+        "prepublishOnly": "yarn run build",
+        "test": "jest",
+        "test:watch": "jest --watch --verbose false"
+    },
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "json-server": "^0.15.0",
+        "jsonwebtoken": "^8.5.1",
+        "yargs": "^13.2.4"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "@types/express": "^4.17.0",
+        "@types/jest": "^24.0.14",
+        "@types/json-server": "^0.14.0",
+        "@types/jsonwebtoken": "^8.3.2",
+        "@types/supertest": "^2.0.7",
+        "@types/yargs": "^13.0.0",
+        "jest": "^24.8.0",
+        "rimraf": "^2.6.3",
+        "supertest": "^4.0.2",
+        "tree-kill": "^1.2.1",
+        "ts-jest": "^24.0.2",
+        "ts-node-dev": "^1.0.0-pre.40",
+        "tslint": "^5.17.0",
+        "tslint-config-prettier": "^1.18.0",
+        "typescript": "^3.5.2",
+        "typescript-tslint-plugin": "^0.5.0"
+    },
+    "keywords": [
+        "JSON",
+        "server",
+        "fake",
+        "REST",
+        "API",
+        "prototyping",
+        "mock",
+        "mocking",
+        "test",
+        "testing",
+        "rest",
+        "data",
+        "dummy",
+        "sandbox",
+        "json-server",
+        "middleware",
+        "auth",
+        "authentication",
+        "authorization",
+        "jwt"
+    ]
 }
